--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "nuxt": "^2.0.0",
     "bootstrap-vue": "^2.0.0",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/axios": "^5.3.6",
-    "Vuex": "latest"
+    "@nuxtjs/axios": "^5.3.6"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
