--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "heroku-postbuild": "npm run build"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
-    "bootstrap-vue": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
     "bootstrap": "^4.1.3",
-    "@nuxtjs/axios": "^5.3.6"
+    "bootstrap-vue": "^2.0.0",
+    "nuxt": "^2.0.0",
+    "vue": "^2.6.10",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
